Css fixes for alignment

--- a/components/radiobutton/radiobutton.css
+++ b/components/radiobutton/radiobutton.css
@@ -16,9 +16,9 @@
 }
 
 .ui-radiobutton-icon {
-    font-size: 10px;
-    margin-top: 3px;
-    margin-left: 2px;
+    font-size: 8px;
+    margin-top: 4px;
+    margin-left: 3px;
     display: block;
 }
  
